# chip8-emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  chip8.cpp  chip8.h  chip8.hpp  main.cpp
src/: chip8.cpp  chip8.h  main.cpp
